--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -59,8 +59,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\PlayStatusConverter.cs" />
+    <Compile Include="Effects\MyRevealBorderBrush.cs" />
+    <Compile Include="Effects\MyRevealBorderLight.cs" />
+    <Compile Include="Effects\RevealBrush.cs" />
     <Compile Include="Helpers\UtilityHelper.cs" />
     <Compile Include="Models\MusicModel.cs" />
+    <Compile Include="Models\PlayerStatus.cs" />
     <Compile Include="Models\PlaylistItemModel.cs" />
     <Compile Include="Models\WindowMode.cs" />
     <Compile Include="Services\AilianBTService.cs" />
@@ -72,6 +77,7 @@
     <Compile Include="Models\DownloadStatus.cs" />
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\MusicService.cs" />
+    <Compile Include="ViewModels\PlayerViewModel.cs" />
     <Compile Include="ViewModels\SettingViewModel.cs" />
     <Compile Include="Views\Controls\KeyPannelControl.cs" />
     <Compile Include="Views\Controls\Notification.xaml.cs">
@@ -94,6 +100,9 @@
     <Compile Include="Models\NewKeyModel.cs" />
     <Compile Include="Models\ShowModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Controls\PlayerView.xaml.cs">
+      <DependentUpon>PlayerView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Controls\SearchBox.xaml.cs">
       <DependentUpon>SearchBox.xaml</DependentUpon>
     </Compile>
@@ -206,6 +215,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Controls\PlayerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Controls\SearchBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -288,6 +301,9 @@
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>4.7.2</Version>
+    </PackageReference>
+    <PackageReference Include="Win2D.uwp">
+      <Version>1.25.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
