Adjust music player

--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\PlayStatusConverter.cs" />
+    <Compile Include="Converters\TimeSpanConverter.cs" />
     <Compile Include="Effects\MyRevealBorderBrush.cs" />
     <Compile Include="Effects\MyRevealBorderLight.cs" />
     <Compile Include="Effects\RevealBrush.cs" />
