--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Converters\PlayStatusVisibilityConverter.cs" />
     <Compile Include="Helpers\AssertsHelper.cs" />
     <Compile Include="Models\DownloadStatus.cs" />
+    <Compile Include="Services\AppCenterService.cs" />
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\MusicService.cs" />
     <Compile Include="ViewModels\PlayerViewModel.cs" />
@@ -273,6 +274,12 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp">
       <Version>0.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>3.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>3.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.5</Version>
